unpackaged/main/default/objects/ZP_Recovery_Case__c/ZP_Recovery_Case__c.object-meta.xml
<CustomObject>
    <label>ZP Recovery Case</label>
    <nameField>
        <displayFormat>ZPR-{0000}</displayFormat>
        <label>ZP Recovery Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Recovery Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>