unpackaged/main/default/objects/ZP_Recovery_Case__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>