unpackaged/main/default/objects/ZP_Recovery_Case__c/fields/Initial_Recovery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Recovery_Amount__c</fullName>
    <label>Initial Recovery Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>