unpackaged/main/default/objects/ZP_Recovery_Case__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>