unpackaged/main/default/objects/ZP_Recovery_Case__c/fields/Recovery_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Case_Id__c</fullName>
    <externalId>true</externalId>
    <label>Recovery Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>