unpackaged/main/default/objects/ZP_Recovery_Case__c/fields/Recovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Status__c</fullName>
    <label>Recovery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>